# ocr-mini-bench

./: .env.example  .gitignore  LICENSE  README.md  justfile  package-lock.json  package.json  pyproject.toml
artifacts/full-2026-03-14/: latest.json  latest.md
artifacts/postprocess/full-2026-03-14/: comparison.summary.json  leaderboard.aggregation.json  leaderboard.frontend.json  (+1 more)
artifacts/public-rc-gemini31/: latest.json  latest.md  snapshot-2026-03-16T11-46-34-339Z.debug.json
bench_documents/: README.md
config/: models.public.json
dataset/: manifest.json
docs/: PROJECT_STRUCTURE.md
scripts/: bootstrap_dataset.mjs  bootstrap_dataset.py  checkpoint_status.mjs  checkpoint_status.py  parity_diff.py  parity_show.py  rebuild_from_checkpoint.mjs  rebuild_from_checkpoint.py  serve_ui.mjs  serve_ui.py  summarize_labels.mjs  summarize_labels.py  validate_dataset.mjs  validate_dataset.py
src/benchmark/: dataset.ts  normalize-ground-truth.ts  run.ts  scoring.ts  types.ts
src/cli/: run-benchmark.ts
src/config/: backend-config.ts  model-catalog.ts  paths.ts
src/lib/: errors.ts  type-guards.test.ts  type-guards.ts
src/ocr/: catalog.ts  constants.ts  cost.ts  gemini-cache.ts  parsing.test.ts  parsing.ts  provider-utils.ts  runner.ts  text-readers.ts  types.ts
src/ocr_mini_bench/: __init__.py
src/postprocess/: aggregate.ts  io.ts  raw-contract.ts  types.ts
tests/replay/: test_orchestrator_e2e.py  test_provider_anthropic.py  test_provider_gemini.py  test_provider_mistral.py  test_provider_openai.py  test_run_benchmark_cli_e2e.py
tests/scripts/: test_bootstrap_dataset.py  test_checkpoint_status.py  test_rebuild_from_checkpoint.py  test_serve_ui.py  test_summarize_labels.py  test_validate_dataset.py
tests/smoke/: conftest.py  test_providers_live.py
tests/unit/: test_benchmark_types.py  test_config.py  test_lib_errors.py  test_lib_type_guards.py  test_ocr_cost.py  test_ocr_parsing.py  test_provider_utils.py  test_run_benchmark_cli.py  test_run_identity.py  test_run_math.py  test_run_pool.py  test_run_progress.py  test_run_provider_lanes.py  test_scoring_matching.py  test_scoring_text_normalization.py  test_smoke.py  test_text_readers.py
ui/: debug.html  debug.js  index.html  index.js  styles.css
(+114 files in other folders)
