[project]
name = "ocr-mini-bench"
version = "0.1.0"
description = "Lightweight, reproducible OCR benchmark for LLM providers."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "anthropic>=0.40",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
ocr-bench = "ocr_mini_bench.cli.run_benchmark:app"
ocr-bench-compare = "ocr_mini_bench.cli.postprocess.compare:app"
ocr-bench-metrics = "ocr_mini_bench.cli.postprocess.metrics:app"
ocr-bench-export-raw = "ocr_mini_bench.cli.postprocess.export_raw:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_mini_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",
    # Tests deliberately use Greek/Cyrillic confusables.
    "RUF001",
    "RUF003",
]
# Confusables registry deliberately uses Greek/Cyrillic letters in keys
# and comments — that's the whole point of the lookup table.
"src/ocr_mini_bench/benchmark/scoring/text_normalization.py" = ["RUF001", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/ocr_mini_bench"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: pure-function unit tests (no I/O, no network)",
    "replay: tests that replay frozen provider responses (no network)",
    "smoke: tests that hit a live API (requires API keys, opt-in)",
]
asyncio_mode = "auto"
